cmake_minimum_required(VERSION 3.10)

project(rtw)

if (DEFINED TIM_TEST_BUILD)
    message("Test build")
    add_library(rtw SHARED test/test.h str/rtw_str.c str/rtw_str.h test/rtw_str_test.c)
elseif (${BUILD_EXAMPLES} MATCHES "all")
    message("Build examples (all)")
    add_executable(rtw_hmap_example hmap/rtw_hmap.c examples/hash_map_example.c)
    add_executable(rtw_bset_example bset/rtw_bset.c examples/binary_set_example.c)
    add_executable(rtw_pq_example priority_queue/rtw_priority_queue.c vec/rtw_vec.c examples/priority_queue_example.c)
elseif (${BUILD_EXAMPLES} MATCHES "hmap")
    message("Build examples (hmap)")
    add_executable(rtw_hmap_example hmap/rtw_hmap.c examples/hash_map_example.c)
elseif (${BUILD_EXAMPLES} MATCHES "bset")
    message("Build examples (bset)")
    add_executable(rtw_bset_example bset/rtw_bset.c examples/binary_set_example.c)
elseif (${BUILD_EXAMPLES} MATCHES "priority_queue")
    message("Build examples (priority_queue)")
    add_executable(rtw_pq_example priority_queue/rtw_priority_queue.c examples/priority_queue_example.c)
else()
    message("Build")
    add_library(rtw SHARED bset/rtw_bset.c hmap/rtw_hmap.c str/rtw_str.c vec/rtw_vec.c)
endif()
